--- a/DockerFile
+++ b/DockerFile
@@ -2,6 +2,6 @@ FROM openjdk:18-jdk-alpine
 
 EXPOSE  8080
 
-COPY    target/demo-0.0.1-SNAPSHOT.jar myapp. jar
+COPY    target/demo-0.0.1-SNAPSHOT.jar app.jar
 
 CMD ["java", "-jar", "app.jar"]
