--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: '3'
 services:
   app3:
     build: ./
-    image: 'myapp:3.0'
+    image: 'app:3.0'
     container_name: 'container'
     ports:
       - '8080:8080'
